[package]
name = "encrypted-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
openssl = { version = "0.10.64", features = ["vendored"] }
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
